cards fixed and nav bar z-index fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 #top {
     width: 100vw;
     height: 50vh;
-    background-color: 454A4F;
+    background-color: 3A3E42;
     animation: topdiv 7s forwards;
     z-index: 998;
     margin-bottom: 0 !important;
@@ -29,7 +29,7 @@ body {
 .bottom {
     width: 100vw;
     height: 50vh;
-    background-color:  454A4F;
+    background-color:  3A3E42;
     animation: bottomdiv 7s forwards;
     top: 50%;
     z-index: 998;
@@ -42,8 +42,12 @@ nav {
     position: fixed;
     top: 0;
     background-color: 454A4F;
-    z-index: -1;
+    z-index: 0;
     /*opacity: 1;*/
+}
+
+.port-nav{
+    z-index: 997;
 }
 
 #about-pic {
@@ -67,6 +71,7 @@ nav {
     animation: text 2s forwards 6.6s;
     color: white;
     padding-bottom: 20px;
+    z-index: -1;
 
 
 }
@@ -78,6 +83,14 @@ nav {
 
 .page-footer{
 	background-color:  454A4F;
+	/*position: fixed;*/
+	width: 100vw;
+	height: -50vh;
+	bottom:0;
+}
+
+.my-footer {
+	position: fixed;
 }
 
 #my-name {
@@ -86,32 +99,47 @@ nav {
 
 #card-1 {
     width: 400px;
-    margin-left: 15px;
-    display: inline-block;
-    margin-top: 80px;
+    padding-right: 20px;
+    /*margin-left: 15px;*/
+    /*display: inline-block;*/
+    /*margin-top: 80px;*/
+    
 }
 
 #card-2 {
     width: 400px;
-    float: right;
-    margin-right: 15px;
-    margin-top: 80px;
+    padding-left: 20px;
+    /*float: right;*/
+    /*margin-right: 15px;
+    margin-top: 80px;*/
+    
 }
 
 #card-3 {
     width: 400px;
-    margin-left: 15px;
-    display: inline-block;
+    /*margin-left: 15px;*/
+    
+    /*display: inline-block;
+*/    /*flex-direction: row:*/ 
+    
 }
-
+ 
 #card-4 {
     width: 400px;
-    float: right;
-    margin-right: 15px;
-    justify-content: flex-end;
-    position: relative;
-    float: right;
-    margin-top: 0;
+    /*margin-right: 15px;*/
+    /*justify-content: flex-end;*/
+    /*position: relative;*/
+    /*margin-top: 0;*/
+   
+    bottom: 0;
+}
+
+#card-top{
+    margin-top: 70px;
+}
+
+#card-bottom{
+    margin-bottom: 250px;
 }
 
 #speed {
@@ -122,6 +150,15 @@ nav {
     align-self: center;
 }
 
+#main-container{
+	position: relative;
+    top:0;
+
+}
+
+h1{
+    font-size: 700%;
+}
 
 
 /*-----------------------------------------------------*/
